@@ -9,7 +9,7 @@ plot.igraph(x, layout = layout.random, layout.par = list(),
     labels = NULL, label.color = "darkblue", label.font = NULL, 
     label.degree = -pi/4, label.dist = 0, vertex.color = "SkyBlue2", 
     vertex.size = 15, edge.color = "darkgrey", edge.width = 1,
-    edge.labels = NA, vertex.frame.color="black",
+    edge.labels = NA, vertex.frame.color="black", margin=0, loop.angle=0,
     axes = FALSE, xlab = "", ylab = "", xlim=c(-1,1), ylim=c(-1,1), \dots)
 }
 \arguments{
@@ -41,6 +41,9 @@ plot.igraph(x, layout = layout.random, layout.par = list(),
     labels. The vector might contain \code{NA}'s as well to suppress
     labels for some edges.}
   \item{vertex.frame.color}{The color(s) of the border of the vertices.}
+  \item{margin}{The margin to add to each side of the plot.}
+  \item{loop.angle}{Numeric vector or constant giving the angle in
+    degrees for the drawing of the loop edges.}
   \item{axes}{Logical, whether to plot axes, defaults to FALSE.}
   \item{xlab}{The label of the horizontal axis. Defaults to the empty string.}
   \item{ylab}{The label of the vertical axis. Defaults to the empty
