@@ -18,7 +18,8 @@ tkplot (graph, layout = layout.random, layout.par = list(),
     labels = NULL, label.color = "darkblue", label.font = NULL, 
     label.degree = -pi/4, label.dist = 0, vertex.color = "SkyBlue2", 
     vertex.size = 15, edge.color = "darkgrey", edge.width = 1,
-    edge.labels=NA, vertex.frame.color="black", \dots)
+    edge.labels=NA, vertex.frame.color="black", loop.angle=0,
+    margin=30, \dots)
 
 tkplot.close(tkp.id, window.close = TRUE) 
 tkplot.off()
@@ -102,6 +103,9 @@ tkplot.rotate(tkp.id, degree = NULL, rad = NULL)
     an attribute or without it: a constant color for all vertices, or a
     numeric or character or numeric vector giving the different colors
     for the vertices.}
+  \item{loop.angle}{Numeric vector of constant giving the angle in
+    degrees for the visualization of loop edges.}
+  \item{margin}{The margin at each side of the canvas.}
   \item{tkp.id}{The id of the tkplot window to close.}
   \item{window.close}{Leave this on the default value.}
    \item{width}{The width of the rectangle for generating new
